--- a/src/pages/work/work.styles.css
+++ b/src/pages/work/work.styles.css
@@ -51,6 +51,13 @@
     justify-content: center;
     margin-top: 1em;
 }
+.work .details-text .button-container-mobile button:first-child {
+    margin-right: 1em;
+}
+.work .image-container .overlay > .text > button:first-child {
+    margin-right: 1em;
+}
+
 @media only screen and (min-width: 991px) {
     .work .details-text .button-container-mobile {
         display: none;
